Closed Bug 973401 Opened 10 years ago Closed 10 years ago

"ASSERTION: missing uri" with location object from removed iframe

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jruderman, Assigned: bholley)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase
###!!! ASSERTION: missing uri: 'aURI', file content/base/src/nsContentUtils.cpp, line 5465
Attached file stack
Followed by:

###!!! ASSERTION: Must have URI: 'aURI', file nsNetUtil.h
This is a regression from bug 828261, as far as I can tell.  nsLocation::GetURI can return null and NS_OK; GetOrigin needs to deal with that case.
Blocks: 828261
Flags: needinfo?(bobbyholley)
Attachment #8378692 - Flags: review?(bugs)
https://tbpl.mozilla.org/?tree=Try&rev=b652fc30043f
Flags: needinfo?(bobbyholley)
Attachment #8378692 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/046d5414b0d3
Assignee: nobody → bobbyholley
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: