Bug 973401 - Handle null from GetURI. r=smaug